// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TmBalance do not show available atoms when the user has none in the first place 1`] = `
<div
  class="balance-header"
>
  <div>
    <div
      class="values-container"
    >
      <div>
        <div
          class="upper-header"
        >
          <div
            class="total-atoms"
          >
            <h3>
              Total ATOM
            </h3>
             
            <h2
              class="total-atoms__value"
            >
              
              0
            
            </h2>
          </div>
           
          <button
            class="tutorial-button"
          >
            <span>
              Need some tokens?
            </span>
          </button>
        </div>
         
        <div
          class="scroll"
        >
          <div
            class="row lower-header scroll-item single-denom-rewards"
          >
            <div
              class="row"
            >
              <!---->
               
              <!---->
            </div>
             
            <!---->
          </div>
        </div>
      </div>
    </div>
     
    <div
      class="button-container"
    >
      <tmbtn-stub
        class="send-button"
        type="secondary"
        value="Send"
      />
       
      <tmbtn-stub
        class="withdraw-rewards"
        disabled="true"
        id="withdraw-btn"
        value="Claim Rewards"
      />
    </div>
     
    <sendmodal-stub
      denoms="ATOM"
    />
     
    <modalwithdrawrewards-stub />
     
    <!---->
  </div>
</div>
`;

exports[`TmBalance show the balance header when signed in 1`] = `
<div
  class="balance-header"
>
  <div>
    <div
      class="values-container"
    >
      <div>
        <div
          class="upper-header"
        >
          <div
            class="total-atoms"
          >
            <h3>
              Total ATOM
            </h3>
             
            <h2
              class="total-atoms__value"
            >
              
              3,210
            
            </h2>
          </div>
           
          <button
            class="tutorial-button"
          >
            <span>
              Need some tokens?
            </span>
          </button>
        </div>
         
        <div
          class="scroll"
        >
          <div
            class="row lower-header scroll-item single-denom-rewards"
          >
            <div
              class="row"
            >
              <div
                class="available-atoms"
              >
                <h3>
                  Available ATOM
                </h3>
                 
                <h2>
                  
                  1,230
                
                </h2>
                 
                <div
                  class="rewards multi-denom"
                >
                  <!---->
                </div>
              </div>
               
              <div
                class="rewards"
              >
                <h3>
                  Total Rewards
                </h3>
                 
                <h2>
                  
                  +1,000.45
                
                </h2>
              </div>
            </div>
             
            <!---->
          </div>
        </div>
      </div>
    </div>
     
    <div
      class="button-container"
    >
      <tmbtn-stub
        class="send-button"
        type="secondary"
        value="Send"
      />
       
      <tmbtn-stub
        class="withdraw-rewards"
        id="withdraw-btn"
        value="Claim Rewards"
      />
    </div>
     
    <sendmodal-stub
      denoms="ATOM"
    />
     
    <modalwithdrawrewards-stub />
     
    <!---->
  </div>
</div>
`;
